prevent focusing on light elements when they are out of bounds

--- a/Hannastiina_React/src/components/css/Header.module.css
+++ b/Hannastiina_React/src/components/css/Header.module.css
@@ -4,7 +4,7 @@ header {
   flex-direction: column;
   align-items: center;
 }
-header nav,
+header nav.main,
 .pink.filler {
   height: calc(calc(var(--gap) * 1) + 1vw);
   max-height: calc(calc(var(--gap) * 1) + 1vw);
@@ -22,7 +22,7 @@ header nav,
 .reset {
   display: none;
 }
-header nav {
+header nav.main {
   display: flex;
   flex-flow: row nowrap;
   align-items: flex-end;
@@ -33,16 +33,16 @@ header nav {
   background: var(--gradient-top-down);
   z-index: 3;
 }
-header nav ul {
+header nav.main ul {
   display: none;
 }
 
-header nav,
+header nav.main,
 header .img {
   margin-bottom: calc(var(--gap) * 0.3);
 }
 
-header nav ul button {
+header nav.main ul button {
   color: hsl(var(--hue), var(--sat), 7%);
   display: flex;
   flex-flow: column nowrap;
@@ -55,7 +55,7 @@ header nav ul button {
   border: 0;
   background: none;
 }
-header nav ul button > span {
+header nav.main ul button > span {
   position: absolute;
   top: 0;
   left: 0;
@@ -70,43 +70,45 @@ header nav ul button > span {
   transition-property: transform, color, border;
   font-style: italic;
 }
-header nav ul button > span {
+header nav.main ul button > span {
   background-color: var(--pink-light);
   padding: 0 0.4em 0.2em;
   border-radius: var(--radius-small);
   border-bottom: 4px solid var(--pink-light);
 }
-header nav ul button:hover > span,
-header nav ul button:focus > span,
-header nav ul button:focus-visible > span {
+header nav.main ul button:hover > span,
+header nav.main ul button:focus > span,
+header nav.main ul button:focus-visible > span {
   transform: translateY(0.3rem);
   border-bottom: 4px solid var(--pink);
 }
-header nav ul button > span span.icon {
+header nav.main ul button > span span.icon {
   transition-duration: 0.3s;
   transition-property: color, opacity;
-  height: 2rem;
+  height: 1.6rem;
+  max-height: 1.6rem;
+  min-height: 1.6rem;
   opacity: 0;
 }
-header nav ul button:hover > span span.icon,
-header nav ul button:focus > span span.icon,
-header nav ul button:focus-visible > span span.icon {
+header nav.main ul button:hover > span span.icon,
+header nav.main ul button:focus > span span.icon,
+header nav.main ul button:focus-visible > span span.icon {
   opacity: 1;
 }
-header nav ul button > span span {
+header nav.main ul button > span span {
   height: 1.5rem;
 }
 
-header nav ul li.services button svg {
+header nav.main ul li.services button svg {
   font-size: 1.5em;
 }
-header nav ul li.contact button svg {
+header nav.main ul li.contact button svg {
   transform: rotate(15deg);
 }
-header nav ul li button svg,
-header nav ul button:hover,
-header nav ul button:focus,
-header nav ul button:focus-visible {
+header nav.main ul li button svg,
+header nav.main ul button:hover,
+header nav.main ul button:focus,
+header nav.main ul button:focus-visible {
   color: hsl(var(--hue), var(--sat), 27%);
 }
 header .img {
@@ -155,23 +157,55 @@ header img.fg {
 }
 .active {
 }
-.wide {
+
+.skip-links {
+  z-index: 999;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
-.tall {
+.skip-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  background: var(--pink-light);
+  color: var(--dark);
+  padding: 1em 2em;
+  margin-top: 2px;
+  margin-left: 2px;
+  outline: 2px solid currentColor;
+  outline-offset: -2px;
+  transform: translateX(-101%);
+  transition: 0.3s transform ease-in-out;
+}
+.skip-link:focus {
+  width: max-content;
+  transform: translateX(0%);
+}
+.skip-links ul {
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 0;
+  margin: 0;
+}
+.skip-links li {
+  white-space: nowrap;
 }
 
 @media (min-width: 300px) {
-  header nav,
+  header nav.main,
   header .img {
     margin-bottom: calc(var(--gap) * 0.5);
   }
-  header nav,
+  header nav.main,
   .pink.filler {
     height: calc(calc(var(--gap) * 2) + 1vw);
     max-height: calc(calc(var(--gap) * 2) + 1vw);
     width: 100%;
   }
-  header nav ul {
+  header nav.main ul {
     display: flex;
     flex-flow: row nowrap;
     align-items: flex-end;
@@ -193,7 +227,9 @@ header img.fg {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1;
+    height: 100%;
+    z-index: 3;
+    pointer-events: none;
   }
   .herocontent .item {
     transition-property: top, right, bottom, left, transform;
@@ -205,6 +241,10 @@ header img.fg {
     -ms-filter: blur(10px);
     filter: blur(10px);
     opacity: 0.6;
+    pointer-events: all;
+  }
+  .herocontent .item.disable {
+    transition-property: none;
   }
   .herocontent .item:focus-visible {
     opacity: 0.9;
@@ -258,7 +298,7 @@ header img.fg {
   }
 }
 @media (min-width: 600px) {
-  header nav ul {
+  header nav.main ul {
     padding: 0 3em 0 0;
     justify-content: flex-end;
   }
@@ -273,7 +313,7 @@ header img.fg {
 }
 
 @media (min-width: 800px) {
-  header nav,
+  header nav.main,
   header .img {
     margin-bottom: 1.2vw;
   }
