--- a/Hannastiina_React/src/css/index.css
+++ b/Hannastiina_React/src/css/index.css
@@ -865,9 +865,7 @@ section.card > ol {
 .top-links button span.around {
   transform: rotate(180deg);
 }
-div.edit ul.palvelut > li {
-  flex-flow: row nowrap;
-}
+
 div.edit ul.palvelut > li[draggable='true'] {
   cursor: -webkit-grab;
   cursor: grab;
